# Desaf-o1_informatica2

./: .gitignore  CMakeLists.txt  README.md  auxiliares.cpp  auxiliares.h  crypto.cpp  crypto.h  detectarydescomprimir.cpp  detectarydescomprimir.h  io.cpp  io.h  main.cpp
datasetDesarrollo/: Prueba.txt
